--- a/MSReportViewer/MSReportViewer/MSReportViewer.csproj
+++ b/MSReportViewer/MSReportViewer/MSReportViewer.csproj
@@ -58,9 +58,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="colsgroup.rdlc">
+    <EmbeddedResource Include="Reports\colsgroup.rdlc">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Models\" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
