--- a/MSReportViewer/MSReportViewer/MSReportViewer.csproj
+++ b/MSReportViewer/MSReportViewer/MSReportViewer.csproj
@@ -55,17 +55,22 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Models\Columns.cs" />
+    <Compile Include="Models\Rows.cs" />
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
     <EmbeddedResource Include="Reports\colsgroup.rdlc">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reports\rowsgroup.rdlc">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <None Include="Properties\DataSources\MSReportViewer.Models.Columns.datasource" />
+    <None Include="Properties\DataSources\MSReportViewer.Models.Rows.datasource" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
